tests/netedit/demandelements/waypoint/basic/invalid_parent/output.netedit
TestFunctions: Netedit opened successfully
Finding reference
TestFunctions: 'reference.png' found. Position: 303 - 167
dummyParent
TestFunctions: Clicked over position 550 - 423
route_0
TestFunctions: Clicked over position 550 - 423
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Clicked over position 304 - 168
TestFunctions: Netedit closed successfully
